@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
-* 
+* [jan] Fix moving rules to an explicit position (Bug #10172).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -935,7 +935,7 @@
    <date>2011-04-20</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
-* 
+* [jan] Fix moving rules to an explicit position (Bug #10172).
    </notes>
   </release>
  </changelog>
